--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "keywords": [
     "css",
     "js",
-    "join css"
+    "join css",
     "join js"
   ],
   "homepage": "http://github.com/osoznan/asset-union",
